--- a/base/src/index.html
+++ b/base/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="thisDotNgUpgrade">
   <head>
     <meta charset="utf-8">
-    <title>thisdotNgupgrade</title>
+    <title>This Dot - NgUpgrade</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -23,7 +23,11 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <root></root>
+    <navbar></navbar>
+
+    <div class="container">
+      <div ng-view></div>
+    </div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <script src="../node_modules/angular/angular.js"></script>
