--- a/work/src/index.html
+++ b/work/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="thisDotNgUpgrade">
   <head>
     <meta charset="utf-8">
-    <title>thisdotNgupgrade</title>
+    <title>This Dot NgUpgrade</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -23,21 +23,19 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <root></root>
+    <navbar></navbar>
+
+    <div class="container">
+      <div ng-view></div>
+    </div>
+
 
     <!-- build:js(src) scripts/vendor.js -->
     <script src="../node_modules/angular/angular.js"></script>
-    <script src="../node_modules/angular-animate/angular-animate.js"></script>
-    <script src="../node_modules/angular-aria/angular-aria.js"></script>
-    <script src="../node_modules/angular-cookies/angular-cookies.js"></script>
-    <script src="../node_modules/angular-messages/angular-messages.js"></script>
     <script src="../node_modules/angular-route/angular-route.js"></script>
-    <script src="../node_modules/angular-sanitize/angular-sanitize.js"></script>
     <script src="../node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
-    <script src="../node_modules/angular-touch/angular-touch.js"></script>
     <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
-    <script src="../node_modules/moment/moment.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
