--- a/work/src/index.html
+++ b/work/src/index.html
@@ -1,51 +1,13 @@
 <!doctype html>
-<html ng-app="thisDotNgUpgrade">
-  <head>
-    <meta charset="utf-8">
-    <title>This Dot NgUpgrade</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-    <link rel="stylesheet" href="../node_modules/animate.css/animate.css" />
-    <link rel="stylesheet" href="../node_modules/angular-toastr/dist/angular-toastr.css" />
-    <!-- endbuild -->
-
-    <!-- build:css({.tmp/serve,src}) styles/app.css -->
-    <!-- inject:css -->
-    <!-- css files will be automatically insert here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <navbar></navbar>
-
-    <div class="container">
-      <div ng-view></div>
-    </div>
-
-
-    <!-- build:js(src) scripts/vendor.js -->
-    <script src="../node_modules/angular/angular.js"></script>
-    <script src="../node_modules/angular-route/angular-route.js"></script>
-    <script src="../node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
-
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>This Dot NgUpgrade</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root></app-root>
+</body>
 </html>
